2010-07-03  Maciej Stachowiak  <mjs@apple.com>

        Rubber stamped by Anders Carlsson.

        Add stdint.h include to fix WebKitTestRunner build.

        * UIProcess/API/C/WKPage.h:

2010-07-02  Luiz Agostini  <luiz.agostini@openbossa.org>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Wrong method name in file  Connection.h
        https://bugs.webkit.org/show_bug.cgi?id=41536

        Method openConnectionHandler was spelled as openConnection in class Connection.

        * Platform/CoreIPC/Connection.h:

2010-07-02  Luiz Agostini  <luiz.agostini@openbossa.org>

        Reviewed by Sam Weinig.

        Adding notification and touch events methods to WebChromeClient
        https://bugs.webkit.org/show_bug.cgi?id=41527

        * WebProcess/WebCoreSupport/WebChromeClient.cpp:
        (WebKit::WebChromeClient::notificationPresenter):
        (WebKit::WebChromeClient::needTouchEvents):
        * WebProcess/WebCoreSupport/WebChromeClient.h:

2010-07-02  Luiz Agostini  <luiz.agostini@openbossa.org>

        Reviewed by Sam Weinig.

        Removing CoreFoundation.h include from WKFrame.h
        https://bugs.webkit.org/show_bug.cgi?id=41528

        * UIProcess/API/C/WKFrame.h:

2010-07-02  Sam Weinig  <sam@webkit.org>

        Reviewed by Oliver Hunt.

        Patch for https://bugs.webkit.org/show_bug.cgi?id=41540
        WebKit2: Add InjectedCode API to get a list of subframes

        * WebProcess/InjectedBundle/API/c/WKBundleFrame.cpp:
        (WKBundleFrameCopyChildFrames):
        * WebProcess/InjectedBundle/API/c/WKBundleFrame.h:
        * WebProcess/WebPage/WebFrame.cpp:
        (WebKit::childFrameRef):
        (WebKit::childFrameDeref):
        (WebKit::WebFrame::childFrames):
        * WebProcess/WebPage/WebFrame.h:
        * mac/WebKit2.exp:

2010-07-02  Sam Weinig  <sam@webkit.org>

        Reviewed by Anders Carlsson.

        Turn off the Objective-C garbage collection for the WebProcess.
